[project]
name = "markdownthis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "layoutparser>=0.3.4",
    "paddleocr>=3.3.1",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
]
